[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TextEnterDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Valera32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/AlertDialog.tscn" type="PackedScene" id=4]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameDialog" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -262.0
margin_top = -240.0
margin_right = 262.0
margin_bottom = -37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterNameLabel" type="Label" parent="NameDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.5
margin_top = 25.0
margin_right = 135.5
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "Enter Your Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="NameDialog"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -21.0
margin_right = -25.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorText" type="Label" parent="NameDialog"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -217.0
margin_top = -50.0
margin_right = 217.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.415686, 0.415686, 1 )
text = "Name field cannot be blank"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -50.0
margin_right = 277.0
margin_bottom = 241.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGameButton" type="Button" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 554.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
text = "Join Game"

[node name="CreateGameButton" type="Button" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 554.0
margin_bottom = 235.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
text = "Create Game"

[node name="JoinLobbyDialog" parent="." instance=ExtResource( 1 )]
visible = false
dialog_name = "Enter Lobby Code"
placeholder_text = "Lobby Code"
text_limit = 4

[node name="AlertDialog" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="VBoxContainer/JoinGameButton" to="." method="_on_JoinGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateGameButton" to="." method="_on_CreateGameButton_pressed"]
[connection signal="back_pressed" from="JoinLobbyDialog" to="." method="_on_JoinLobbyDialog_back_pressed"]
[connection signal="confirm_pressed" from="JoinLobbyDialog" to="." method="_on_JoinLobbyDialog_confirm_pressed"]
